--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <!DOCTYPE HTML>
-<html><head><title>A test.</title></head><body><nav><ul><li><a href="test">asd</a></li></ul></nav></body></html>
+<html><head><title>Home</title></head><body><nav><ul><li><a href="index.html" class="selected">Home</a></li><li><a href="program.html">Scientific Program</a></li><li><a href="schedule.html">Schedule</a></li><li><a href="registration.html">Registration</a></li><li><a href="local-info.html">Local information</a></li><li><a href="accomodation.html">Accomodation</a></li></ul></nav>Welcome!</body></html>
