--- a/index.html
+++ b/index.html
@@ -1,2 +1,66 @@
 <!DOCTYPE HTML>
-<html><head><title>Home</title></head><body><nav><ul><li><a href="index.html" class="selected">Home</a></li><li><a href="program.html">Scientific Program</a></li><li><a href="schedule.html">Schedule</a></li><li><a href="registration.html">Registration</a></li><li><a href="local-info.html">Local information</a></li><li><a href="accomodation.html">Accomodation</a></li></ul></nav>Welcome!</body></html>
+
+<html>
+    <head>
+        <link rel="stylesheet" type="text/css" href="css/main.css">
+        <title>
+            Home
+        </title>
+    </head>
+    <body>
+        <div id="wrapper">
+            <div id="left-column">
+                <img src="images/logo-placeholder.jpg">
+                <nav>
+                    <ul>
+                        <li>
+                            <a href="index.html" class="selected">
+                                Home
+                            </a>
+                        </li>
+                        <li>
+                            <a href="program.html">
+                                Scientific Program
+                            </a>
+                        </li>
+                        <li>
+                            <a href="schedule.html">
+                                Schedule
+                            </a>
+                        </li>
+                        <li>
+                            <a href="registration.html">
+                                Registration
+                            </a>
+                        </li>
+                        <li>
+                            <a href="local-info.html">
+                                Local information
+                            </a>
+                        </li>
+                        <li>
+                            <a href="accomodation.html">
+                                Accomodation
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+            <div id="right-column">
+                <header>
+                    <h1>
+                        Logic Colloquium 2016
+                    </h1>
+                    <h2>
+                        University of Leeds
+                        <br>
+                        August
+                    </h2>
+                </header>
+                <section>
+                    The Logic Colloquium 2016, organized under the auspices of the Association for Symbolic Logic, might be held in Leeds, United Kingdom at the end of August 2016.
+                </section>
+            </div>
+        </div>
+    </body>
+</html>
