--- a/registration.html
+++ b/registration.html
@@ -1,2 +1,71 @@
 <!DOCTYPE HTML>
-<html><head><title>Registration</title></head><body><nav><ul><li><a href="index.html">Home</a></li><li><a href="program.html">Scientific Program</a></li><li><a href="schedule.html">Schedule</a></li><li><a href="registration.html" class="selected">Registration</a></li><li><a href="local-info.html">Local information</a></li><li><a href="accomodation.html">Accomodation</a></li></ul></nav><p>Registration has not yet opened.</p><p>[Insert appropriate link to University of Leeds Webshop.]</p></body></html>
+
+<html>
+    <head>
+        <link rel="stylesheet" type="text/css" href="css/main.css">
+        <title>
+            Registration
+        </title>
+    </head>
+    <body>
+        <div id="wrapper">
+            <div id="left-column">
+                <img src="images/logo-placeholder.jpg">
+                <nav>
+                    <ul>
+                        <li>
+                            <a href="index.html">
+                                Home
+                            </a>
+                        </li>
+                        <li>
+                            <a href="program.html">
+                                Scientific Program
+                            </a>
+                        </li>
+                        <li>
+                            <a href="schedule.html">
+                                Schedule
+                            </a>
+                        </li>
+                        <li>
+                            <a href="registration.html" class="selected">
+                                Registration
+                            </a>
+                        </li>
+                        <li>
+                            <a href="local-info.html">
+                                Local information
+                            </a>
+                        </li>
+                        <li>
+                            <a href="accomodation.html">
+                                Accomodation
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+            <div id="right-column">
+                <header>
+                    <h1>
+                        Logic Colloquium 2016
+                    </h1>
+                    <h2>
+                        University of Leeds
+                        <br>
+                        August
+                    </h2>
+                </header>
+                <section>
+                    <p>
+                        Registration has not yet opened.
+                    </p>
+                    <p>
+                        [Insert appropriate link to University of Leeds Webshop.]
+                    </p>
+                </section>
+            </div>
+        </div>
+    </body>
+</html>
