--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     </h2>
                 </header>
                 <section>
-                    The Logic Colloquium 2016, organized under the auspices of the Association for Symbolic Logic, might be held in Leeds, United Kingdom at the end of August 2016.
+                    The ***** **********, organized under the auspices of the *********** *** ******** *****, might be held in Leeds, United Kingdom at the end of August 2016.
                 </section>
             </div>
         </div>
