--- a/index.html
+++ b/index.html
@@ -2,65 +2,61 @@
 
 <html>
     <head>
+        <meta name="robots" content="noindex, nofollow">
+        <link rel="stylesheet" type="text/css" href="css/reset.css">
         <link rel="stylesheet" type="text/css" href="css/main.css">
+        <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Maven+Pro:900">
         <title>
             Home
         </title>
     </head>
     <body>
         <div id="wrapper">
-            <div id="left-column">
-                <img src="images/logo-placeholder.jpg">
-                <nav>
-                    <ul>
-                        <li>
-                            <a href="index.html" class="selected">
-                                Home
-                            </a>
-                        </li>
-                        <li>
-                            <a href="program.html">
-                                Scientific Program
-                            </a>
-                        </li>
-                        <li>
-                            <a href="schedule.html">
-                                Schedule
-                            </a>
-                        </li>
-                        <li>
-                            <a href="registration.html">
-                                Registration
-                            </a>
-                        </li>
-                        <li>
-                            <a href="local-info.html">
-                                Local information
-                            </a>
-                        </li>
-                        <li>
-                            <a href="accomodation.html">
-                                Accomodation
-                            </a>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
-            <div id="right-column">
-                <header>
-                    <h1>
-                        ***** ********** 2016
-                    </h1>
-                    <h2>
-                        University of Leeds
-                        <br>
-                        August
-                    </h2>
-                </header>
-                <section>
-                    The ***** **********, organized under the auspices of the *********** *** ******** *****, might be held in Leeds, United Kingdom at the end of August 2016.
-                </section>
-            </div>
+            <header>
+                <h1>
+                    Logic Colloquium 2016
+                </h1>
+                <h2>
+                    University of Leeds, August ??-??
+                </h2>
+            </header>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="index.html" class="selected">
+                            Home
+                        </a>
+                    </li>
+                    <li>
+                        <a href="program.html">
+                            Scientific Program
+                        </a>
+                    </li>
+                    <li>
+                        <a href="schedule.html">
+                            Schedule
+                        </a>
+                    </li>
+                    <li>
+                        <a href="registration.html">
+                            Registration
+                        </a>
+                    </li>
+                    <li>
+                        <a href="local-info.html">
+                            Local information
+                        </a>
+                    </li>
+                    <li>
+                        <a href="accomodation.html">
+                            Accomodation
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+            <section>
+                The Logic Colloquium, organized under the auspices of the Association for Symbolic Logic, might be held in Leeds, United Kingdom at the end of August 2016.
+            </section>
         </div>
     </body>
 </html>
