--- a/program.html
+++ b/program.html
@@ -1,62 +1,2 @@
 <!DOCTYPE HTML>
-
-<html>
-    <head>
-        <meta name="robots" content="noindex, nofollow">
-        <link rel="stylesheet" type="text/css" href="css/reset.css">
-        <link rel="stylesheet" type="text/css" href="css/main.css">
-        <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Maven+Pro:900">
-        <title>
-            Scientific Program
-        </title>
-    </head>
-    <body>
-        <div id="wrapper">
-            <header>
-                <h1>
-                    Logic Colloquium 2016
-                </h1>
-                <h2>
-                    University of Leeds, August ??-??
-                </h2>
-            </header>
-            <nav>
-                <ul>
-                    <li>
-                        <a href="index.html">
-                            Home
-                        </a>
-                    </li>
-                    <li>
-                        <a href="program.html" class="selected">
-                            Scientific Program
-                        </a>
-                    </li>
-                    <li>
-                        <a href="schedule.html">
-                            Schedule
-                        </a>
-                    </li>
-                    <li>
-                        <a href="registration.html">
-                            Registration
-                        </a>
-                    </li>
-                    <li>
-                        <a href="local-info.html">
-                            Local information
-                        </a>
-                    </li>
-                    <li>
-                        <a href="accomodation.html">
-                            Accomodation
-                        </a>
-                    </li>
-                </ul>
-            </nav>
-            <section>
-                To be confirmed.
-            </section>
-        </div>
-    </body>
-</html>
+<html><head><meta charset="utf-8"><meta name="robots" content="noindex, nofollow"><link rel="stylesheet" type="text/css" href="css/reset.css"><link rel="stylesheet" type="text/css" href="css/main.css"><link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Maven+Pro:900"><title>Logic Colloquium 2016: Scientific Program</title></head><body><div id="wrapper"><header><h1>Logic Colloquium 2016</h1><h2>University of Leeds, August ??-??</h2></header><nav><ul><li><a href="index.html">Home</a></li><li><a href="program.html" class="selected">Scientific Program</a></li><li><a href="schedule.html">Schedule</a></li><li><a href="registration.html">Registration</a></li><li><a href="local-info.html">Local information</a></li><li><a href="accomodation.html">Accomodation</a></li></ul></nav><section><p>To be confirmed.</p></section><div id="footer"><a href="privacy-policy.html">Privacy Policy</a><div>Webmaster: <a href="mailto:admin@example.org">admin@example.org</a></div></div></div></body></html>
